# FABY-Cloud

./: README.md
backend/: models.py  storage_route.py
faby-client/: Cargo.toml  client.rs  gateway.py  lib.rs  requirements.txt
faby-hoster/: Cargo.toml  main.rs
lib/: main.dart  translations.dart
lib/models/: user_data.dart  vfs_node.dart
lib/screens/: cloud_storage_screen.dart
lib/services/: auth_http_client.dart  cloudflare_storage_service.dart  encryption_service.dart  vfs_manager.dart
lib/storage/: DriveStorage.dart  auth_storage.dart
lib/widgets/: side_file_manager.dart
