[package]
name = "faby_grid"
version = "0.1.0"
edition = "2021"

[lib]
name = "faby_grid"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
rand = "0.8"
base64 = "0.21"
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
libp2p = { version = "0.53.2", features = ["tcp", "noise", "yamux", "request-response", "cbor", "tokio", "macros", "relay"] }
serde = { version = "1.0", features = ["derive"] }
reed-solomon-erasure = "6.0"
futures = "0.3"
once_cell = "1"
hmac = "0.12"
hex = "0.4.3"
