[package]
name = "faby-hoster"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.53", features = ["macros", "tokio", "tcp", "noise", "yamux", "request-response", "cbor", "identify", "relay"] }
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
axum = "0.7"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.4", features = ["derive", "env"] } # Важливо: додано фічу "env"
open = "5.0"
sysinfo = "0.30"
governor = "0.6"
nonzero_ext = "0.3"
reed-solomon-erasure = "6.0"
anyhow = "1.0"
hmac = "0.12"
machine-uid = "0.5.4"
igd = "0.12.0"
local-ip-address = "0.5.0"
natpmp = "0.5.0"
ed25519-dalek = "2.2.0"

# ==========================================
# ОПТИМІЗАЦІЯ ДЛЯ ЗМЕНШЕННЯ РОЗМІРУ БІНАРНИКА
# ==========================================
[profile.release]
opt-level = "z"     # Максимальна оптимізація під розмір
lto = true          # Видалення мертвого коду з залежностей
codegen-units = 1   # Краща оптимізація (компіляція довша, важить менше)
strip = true        # Видалення дебаг-символів
panic = "abort"     # Вимикає розгортання стеку (економить місце)
